add_executable(test_tcp_client test_tcp_client.cpp)
target_link_libraries(test_tcp_client pthread dl)


add_executable(test_tcp_server test_tcp_server.cpp)
target_link_libraries(test_tcp_server pthread dl)

add_executable(test_easy_tcp_client test_easy_tcp_client.cpp)
target_link_libraries(test_easy_tcp_client pthread dl)